--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 <body>
    
     <header>
-        <div class="navbar">
 
-            <div class="navbar_brandname"> <img src="./img/desktop/logo.svg" alt="logo"></div>
 
-            <nav class="navbar_menu">
-                <ul>
-                    <li> <a href="#"> About </a> </li>
-                    <li> <a href="#"> Services </a> </li>
-                    <li> <a href="#"> Projects </a> </li>
-                    <li> <a href="#"> Contact </a> </li>
+        <div class="navbar_brandname"> <img src="./img/desktop/logo.svg" alt="logo"></div>
+        <div id="menuToggle">
+            <nav role="navigation">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
