--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
 
-    <h1>WE ARE CREATIVES</h1>
+    <h1><strong>WE ARE CREATIVES</h1></strong>
 
     <figure class="headerimg"><img src="./img/icones/icon-arrow-down.svg"></figure>
     </header>
@@ -109,7 +109,7 @@
 
     <footer>    
 
-        <img src="./img/desktop/logo.svg">
+        </div><img id="logo" src="./img/desktop/logo.svg">
 
         <div class="footer_links">
             <ul>
