--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <title>Sunnyside</title>
 </head>
 
+
+
 <body>
    
     <header>
-
 
         <div class="navbar_brandname"> <img src="./img/desktop/logo.svg" alt="logo"></div>
         <div id="menuToggle">
@@ -52,8 +53,8 @@
 
     <div class="egg">
         <picture>
-            <source media="(max-width: 799px)" srcset="./img/mobile/image-transform.jpg">
-            <source media="(min-width: 800px)" srcset="./img/desktop/image-transform.jpg">
+            <source media="(max-width: 799px)" src="./img/mobile/image-transform.jpg">
+            <source media="(min-width: 800px)" src="./img/desktop/image-transform.jpg">
             <img alt="SEO" class="egg" src="./img/desktop/image-transform.jpg">
         </picture>
         
