--- a/index.html
+++ b/index.html
@@ -20,22 +20,20 @@
    
     <header>
 
-        <div class="navbar_brandname"> <img src="./img/desktop/logo.svg" alt="logo"></div>
-        <div id="menuToggle">
-            <nav role="navigation">
-                <input type="checkbox" />
-                <span></span>
-                <span></span>
-                <span></span>
-                <ul id="menu">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-
+    <div class="navbar_brandname"> <img src="./img/desktop/logo.svg" alt="logo"></div>
+    <div id="menuToggle">
+    <nav role="navigation">
+    <input type="checkbox">
+    <img src="./img/icones/icon-hamburger.svg">
+    </input>
+    <ul id="menu">
+    <li><a href="#">About</a></li>
+    <li><a href="#">Services</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Contact</a></li>
+    </ul>
+    </nav>
+    </div>
 
     <h1><strong>WE ARE CREATIVES</h1></strong>
 
